--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,11 @@
 # GitHub Personal Access Token
-# Required scopes: repo (for private repos) or public_repo (for public repos only)
+#
+# Fine-grained PAT (recommended):
+#   Repository permissions: Metadata(Read), Contents(Read), Pull requests(Read), Deployments(Read)
+#   See README.md for detailed setup instructions.
+#
+# Classic PAT:
+#   Required scopes: repo, read:org
 GITHUB_TOKEN=your_github_token_here
 
 # Google Cloud Project ID
