--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,12 +5,12 @@ WORKDIR /app
 COPY go.mod go.sum* ./
 RUN go mod download
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux go build -o /server ./cmd/server
+RUN CGO_ENABLED=0 GOOS=linux go build -o /httpserver ./cmd/httpserver
 
 # Production stage
 FROM gcr.io/distroless/base-debian12
 WORKDIR /app
-COPY --from=builder /server /app/server
+COPY --from=builder /httpserver /app/httpserver
 ENV TZ=Asia/Tokyo
 EXPOSE 7202
-CMD ["/app/server"]
+CMD ["/app/httpserver"]
