doc: simplify README and separate Docker Compose deployment/development docs

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,23 @@
-# GitHub Personal Access Token
-#
-# Fine-grained PAT (recommended):
-#   Repository permissions: Metadata(Read), Contents(Read), Pull requests(Read), Deployments(Read)
-#   See README.md for detailed setup instructions.
-#
-# Classic PAT:
-#   Required scopes: repo, read:org
-GITHUB_TOKEN=your_github_token_here
-
-# Google Cloud Project ID
-GCP_PROJECT_ID=your_gcp_project_id
-
 # Environment (development/production)
 ENVIRONMENT=development
 
+# ==========
+# for Backend
+# ==========
+# GitHub Personal Access Token
+# Fine-grained PAT (recommended):
+#   Repository permissions: Metadata(Read), Contents(Read), Pull requests(Read), Deployments(Read)
+#   See README.md for detailed setup instructions.
+GITHUB_TOKEN=your_github_token_here
+# Google Cloud Project ID
+GCP_PROJECT_ID=your_gcp_project_id
 # Timezone offset (e.g. "+09:00", "-05:30"). Defaults to UTC if empty
 TZ_OFFSET=+09:00
+
+# ==========
+# for Frontend
+# ==========
+# default language (ja, en, zh-TW, zh-CN, ko, es, fr, de)
+VITE_DEFAULT_LOCALE=ja
+# API base URL (default: /api for dev proxy)
+VITE_API_BASE=/api
